# roboptim-core-plugin-cfsqp

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE.CFSQP  Makefile.am  NEWS  README.CFSQP  README.md  THANKS  configure.ac  roboptim-core-cfsqp-plugin.spec.in
build-aux/: init.mk
doc/: sf-upload.sh.in
include/: Makefile.am
include/roboptim/core/plugin/: cfsqp.hh
msvc/INSTALL/: INSTALL.vcproj
msvc/roboptim-core-plugin-cfsqp/: boost.vsprops  config.h  rob_opt.vsprops  roboptim-core-cfsqp-plugin.sln  roboptim-core-plugin-cfsqp.vcproj  roboptim-core-plugin-cfsqp.vsprops
msvc/simple/: simple.vcproj
msvc/simplewithdll/: simplewithdll.vcproj
src/: CMakeLists.txt  Makefile.am  cfsqp.c  cfsqpusr.h  debug.hh  doc.hh  ofsqp.cc  ofsqp.hh  roboptim-core-cfsqp-plugin.cc
tests/: CMakeLists.txt  Makefile.am  common.hh  optimization-problem-1.cc  optimization-problem-1.stdout  plugin.cc  plugin.stdout  simple-1.cc  simple-1.stdout  simple-2.cc  simple-2.stdout  simple.cc  simple.stdout  testsuite.at
